# detail-product

./: .gitignore  docker-compose.yaml
client/: package-lock.json  package.json
client/assets/css/: tailwind.css
client/components/footer/: footer.vue
client/components/header/: category.vue  header.vue
client/pages/: [slug]-[id].vue
client/types/: base.ts  blog.ts  category.ts  index.ts  item.ts
client/views/itemView/: itemView.vue
client/views/itemView/blog/: blog.vue
client/views/itemView/infoRow/: itemInfo.vue
client/views/itemView/metric/: metricFrame.vue
client/views/itemView/priceHistory/: leftCol.vue  priceChart.vue
server/: Dockerfile  pyproject.toml
server/alembic/: env.py
server/app/: database.py  main.py  registry.py
server/app/config/: settings.py
server/app/dependencies/: pgsql.py
server/app/models/: __init__.py  blog.py  category.py  comment.py  item.py  user.py
server/app/models/mixins/: timestamp_mixin.py
server/app/routes/: __init__.py  blog.py  category.py  healthcheck.py  item.py
server/app/schema/: blog.py  category.py  item.py  price_history.py
server/app/services/: __init__.py  base_service.py  blog.py  category.py  item.py  price_history.py
